--- a/style.css
+++ b/style.css
@@ -5,9 +5,8 @@ body {
 }
 
 canvas {
-    display: block;
-}
-
-h1 {
-    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
