--- a/style.css
+++ b/style.css
@@ -5,9 +5,12 @@ body {
 }
 
 canvas {
-    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 
-h1 {
-    text-align: center;
-}
+<style > @media only screen and (min-width: 600px) {}
+
+</style >
