--- a/style.css
+++ b/style.css
@@ -10,3 +10,46 @@ canvas {
     left: 0;
     z-index: -1;
 }
+
+button {
+    transition-duration: 0.4s;
+    background-color: #ffffff;
+    font-size: 3vw;
+    text-align: center;
+    border: 3px solid #025373;
+    color: #024959;
+    display: block;
+    width: 200px;
+
+    margin: 10px 0 0 20px;
+    padding: 4px 4px 4px 4px;
+}
+
+button:hover {
+    background-color: #f2d785;
+    border: 3px solid #6e4900;
+    color: #6e4900;
+}
+
+#buttonsDiv {
+    position: fixed;
+    right: 20px;
+    top: 20px;
+}
+
+#mainTitle {
+    font-size: 4vw;
+    font-weight: bold;
+    text-align: center;
+
+    padding: 5px 5px 0 5px;
+    border: 3px solid #000000;
+    background: #ffffff;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    width: fit-content;
+    margin: 20px 0 20px 20px;
+}
